syntax = "proto3";

import "basic.proto";

import "google/protobuf/empty.proto";

option go_package = "github.com/piliphulko/marketplace-example/internal/service/service-acct-auth/core";
//protoc -I . service-acct-auth.proto --go_out=../../../.. --go-grpc_out=../../../..

package service_acct_aut;


service AccountAut {
    
    rpc CreateAccount(basic.CustomerNew) returns (google.protobuf.Empty);
    
    rpc CreateAccountWarehouse(basic.WarehouseNew) returns (google.protobuf.Empty);

    rpc CreateAccountVendor(basic.VendorNew) returns (google.protobuf.Empty);

    
    rpc AutAccount(basic.CustomerAut) returns (basic.StringJWT);

    rpc AutAccountWarehouse(basic.WarehouseAut) returns (basic.StringJWT);

    rpc AutAccountVendor(basic.VendorAut) returns (basic.StringJWT);


    rpc ChangeAccount(basic.CustomerChange) returns (google.protobuf.Empty);

    rpc ChangeAccountWarehouse(basic.WarehouseChange) returns (google.protobuf.Empty);

    rpc ChangeAccountVendor(basic.VendorChange) returns (google.protobuf.Empty);


    //rpc CheckJWT(basic.StringJWT) returns (google.protobuf.Empty);

    //rpc GetCountryCity(google.protobuf.Empty) returns (basic.CountryCityPairs);

}
